@@ -8,6 +8,10 @@ lxml changelog
 Features added
 --------------
 
+* Passing the ``unicode`` type as ``encoding`` to ``tostring()`` will
+  serialise to unicode.  The ``tounicode()`` function is now
+  deprecated.
+
 * ``XMLSchema()`` and ``RelaxNG()`` can parse from StringIO.
 
 * ``makeparser()`` function in ``lxml.objectify`` to create a new
